# query-csv

./: README.md  pyproject.toml
src/streamlit_csv_query/: __init__.py  main.py
tests/streamlit_csv_query/: test_main.py
