[project]
name = "streamlit-csv-query"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "David Harting", email = "hartingdavid@icloud.com" }
]
dependencies = [
    "streamlit>=1.36.0",
    "duckdb>=1.0.0",
    "fsspec>=2024.6.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.2",
    "watchdog>=4.0.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/streamlit_csv_query"]
